# email-handler

./: .env.example  .gitignore  README.md  pyproject.toml
email_manager/: config.py  gmail_client.py  util.py
scripts/: release.sh
